--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "date-hidden": "^1.0.8",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
-    "vuetify": "^1.5.5"
+    "vuetify": "^1.5.5",
+    "vuetify-user-registration": "0.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
